--- a/projects/novo-elements/src/elements/date-picker/calendar/calendar.component.scss
+++ b/projects/novo-elements/src/elements/date-picker/calendar/calendar.component.scss
@@ -39,6 +39,7 @@
     position: static;
     top: 0;
     left: 0;
+    overflow: hidden;
   }
 
   .calendar-header {
